apps/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8096
      targetPort: 8096
      protocol: TCP
    - name: metrics
      port: 9101
      targetPort: 9101
      protocol: TCP
  selector:
    app: jellyfin
